--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><a href="#">Contact</a></li>
         </ul>
         <p>ⓒ2021 Wave | All Rights Reserved</p>
+        <p>새로운 p 태그</p>
     </footer>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
